--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,19 @@ ul {
     margin: 6px 0;
 }
 
+button[data-index] {
+    border: none;
+    background-color: beige;
+    color: red;
+    border-radius: 2px;
+    padding: 2px;
+}
+
+button[data-index]:hover {
+    box-shadow: 2px 2px 10px black;
+    border: 1px solid beige;
+}
+
 .button {
     display: flex;
     justify-content: center;
@@ -43,6 +56,7 @@ ul {
 
 #new-book:hover {
     box-shadow: 4px 4px 10px black;
+    border: 1px solid rgb(240, 149, 88);
 }
 
 form {
