--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,23 @@ body {
     margin-top: 20px;
 }
 
-ul {
-    list-style-type: none;
-    
+.books > div {
     padding: 20px;
     border: 3px solid #0071c5;
     border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1 {
+    margin-bottom: 14px;
+}
+
+ul {
+    list-style-type: none;
+    
+    
 }
 
 .books ul div {
