--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ ul {
     margin: 6px 0;
 }
 
-button[data-index] {
+ul .delete, ul .readBtn {
     border: none;
     background-color: beige;
     color: red;
@@ -46,7 +46,12 @@ button[data-index] {
     padding: 2px;
 }
 
-button[data-index]:hover {
+ul .readBtn {
+    color: black;
+    border: black solid 1px;
+}
+
+ul .delete:hover, ul .readBtn:hover {
     box-shadow: 2px 2px 10px black;
     border: 1px solid beige;
 }
