--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body {
     background-color: beige;
 }
 
+/*Library*/
 .books {
     display: flex;
     justify-content: center;
@@ -28,11 +29,14 @@ h1 {
 
 ul {
     list-style-type: none;
-    
-    
+    padding: 0;
 }
 
-.books ul div {
+ul p {
+    font-size: 18px;
+}
+
+.books ul li {
     display: flex;
     gap: 10px;
     margin: 6px 0;
@@ -56,6 +60,8 @@ ul .delete:hover, ul .readBtn:hover {
     border: 1px solid beige;
 }
 
+
+/*New button*/
 .button {
     display: flex;
     justify-content: center;
@@ -75,6 +81,7 @@ ul .delete:hover, ul .readBtn:hover {
     border: 1px solid rgb(240, 149, 88);
 }
 
+/*Form*/
 form {
     display: flex;
     flex-direction: column;
